resolve some sonarlint validations