@@ -9,10 +9,10 @@ import ru.sgk.chatnotesdesktop.backend.HasId;
 import ru.sgk.chatnotesdesktop.backend.datastore.StoredChat;
 
 import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.time.LocalDateTime;
 import java.util.Collection;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 public class DisplayedChat implements Chat<DisplayedMessage>, Displayable<Pane>, HasId<UUID> {
     private final Chat<?> origin;
@@ -86,7 +86,7 @@ public class DisplayedChat implements Chat<DisplayedMessage>, Displayable<Pane>,
     public Collection<DisplayedMessage> messages() {
         // TODO: 01.05.2024 get messages from origin. Map them to DisplayedMessages.
 
-        return origin.messages().stream().map(m -> new DisplayedMessage(this, m)).collect(Collectors.toList());
+        return origin.messages().stream().map(m -> new DisplayedMessage(this, m)).toList();
     }
 
     @Override
@@ -105,7 +105,7 @@ public class DisplayedChat implements Chat<DisplayedMessage>, Displayable<Pane>,
             chat.addEventHandler(MouseEvent.MOUSE_CLICKED, new ListChatClickHandler(this, chat));
             return chat;
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new UncheckedIOException(e);
         }
     }
 }
